--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-    <body>
-       <title>Mike's Homepage!</title>
-    </body>
+    <head>
+        <title>Mike's Homepage!</title> 
+     </head>
+        <body>
+       
+        </body>
+    
 </html>
