update index again
added the h1 tag again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Mike's Homepage!</title> 
      </head>
         <body>
-       
+            <h1>Created with Github!</h1>
         </body>
     
 </html>
