hope this works
serious effort

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Mike's Homepage!</title> 
      </head>
         <body>
-       
+            <h1>Github bot sucks!</h1>
+            <img src="https://avatars2.githubusercontent.com/u/43500102?v=4">
         </body>
     
 </html>
